Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/portfolio2.html
+++ b/portfolio2.html
@@ -675,11 +675,8 @@
         <h2>I am <span>Python Full Stack Developer</span></h2>
         <div class="hero-buttons">
           <a href="#portfolio" class="btn">View Work</a>
-          <a
-            href="c:\Users\kisho\Downloads\software-developer-copy (9).pdf"
-            class="btn"
-            >download resume</a
-          >
+          <a href="c:\Users\kisho\Downloads\software-developer-copy (9).pdf" download="c:\Users\kisho\Downloads\software-developer-copy (9).pdf" title="Download Resume">📄</a>
+
           <a href="#contact" class="btn btn-primary">Hire Me!</a>
         </div>
       </div>
@@ -691,15 +688,11 @@
       <div class="about-content">
         <div class="about-image">
           <img
-            src="c:\Users\kisho\Downloads\WhatsApp Image 2025-11-02 at 11.15.06_a291652a.jpg"
-            alt=" - Python Full Stack Developer"
-            style="
-              width: 100%;
-              border-radius: 20px;
-              box-shadow: 0 20px 60px rgba(50, 184, 198, 0.3);
-              border: 4px solid rgba(50, 184, 198, 0.2);
-            "
-          />
+  src="c:\Users\kisho\Downloads\WhatsApp Image 2025-11-02 at 11.15.06_a291652a.jpg"
+  alt=" - Python Full Stack Developer"
+  style="width: 100%; border-radius: 20px; box-shadow: 0 20px 60px rgba(50, 184, 198, 0.3); border: 4px solid rgba(50, 184, 198, 0.2);"
+/>
+
         </div>
         <div class="about-text">
           <h3>Python Full Stack Developer</h3>
@@ -1052,12 +1045,7 @@
         >
         <a href="https://twitter.com" target="_blank" title="Twitter">🐦</a>
         <a href="mailto:kishorerj018@gmail.com" title="Email">📧</a>
-        <a
-          href="c:\Users\kisho\Downloads\software-developer-copy (9).pdf"
-          download="c:\Users\kisho\Downloads\software-developer-copy (9).pdf"
-          title="Download Resume"
-          >📄</a
-        >
+        <a href="c:\Users\kisho\Downloads\software-developer-copy (9).pdf" download="c:\Users\kisho\Downloads\software-developer-copy (9).pdf" title="Download Resume">📄</a>
       </div>
       <p>
         &copy; 2025 KISHORE KUMAR R. All Rights Reserved. Built with passion and
@@ -1113,3 +1101,4 @@
     </script>
   </body>
 </html>
+
