--- a/portfolio2.html
+++ b/portfolio2.html
@@ -688,7 +688,7 @@
       <div class="about-content">
         <div class="about-image">
           <img
-  src="c:\Users\kisho\Downloads\WhatsApp Image 2025-11-02 at 11.15.06_a291652a.jpg"
+  src="https://github.com/Kishorerj018/portfolio2/blob/master/image.png.jpg?raw=true"
   alt=" - Python Full Stack Developer"
   style="width: 100%; border-radius: 20px; box-shadow: 0 20px 60px rgba(50, 184, 198, 0.3); border: 4px solid rgba(50, 184, 198, 0.2);"
 />
@@ -1101,4 +1101,5 @@
     </script>
   </body>
 </html>
+
 
