--- a/portfolio2.html
+++ b/portfolio2.html
@@ -675,7 +675,7 @@
         <h2>I am <span>Python Full Stack Developer</span></h2>
         <div class="hero-buttons">
           <a href="#portfolio" class="btn">View Work</a>
-          <a href="c:\Users\kisho\Downloads\software-developer-copy (9).pdf" download="c:\Users\kisho\Downloads\software-developer-copy (9).pdf" title="Download Resume">📄</a>
+          <a href="kishore kumar . resume . pdf.pdf" download="kishore kumar . resume . pdf.pdf" title="Download Resume">📄</a>
 
           <a href="#contact" class="btn btn-primary">Hire Me!</a>
         </div>
@@ -1045,7 +1045,7 @@
         >
         <a href="https://twitter.com" target="_blank" title="Twitter">🐦</a>
         <a href="mailto:kishorerj018@gmail.com" title="Email">📧</a>
-        <a href="c:\Users\kisho\Downloads\software-developer-copy (9).pdf" download="c:\Users\kisho\Downloads\software-developer-copy (9).pdf" title="Download Resume">📄</a>
+        <a href="kishore kumar . resume . pdf.pdf" download="kishore kumar . resume . pdf.pdf" title="Download Resume">📄</a>
       </div>
       <p>
         &copy; 2025 KISHORE KUMAR R. All Rights Reserved. Built with passion and
@@ -1101,5 +1101,6 @@
     </script>
   </body>
 </html>
+
 
 
