Update resume download links to GitHub

--- a/index.html
+++ b/index.html
@@ -676,7 +676,7 @@
         <div class="hero-buttons">
           <a href="#portfolio" class="btn">View Work</a>
           <a
-            href="c:\Users\kisho\Downloads\software-developer-copy (9).pdf"
+            href="https://github.com/Kishorerj018/portfolio2/blob/master/kishore%20kumar%20.%20resume%20.%20pdf.pdf"
             class="btn"
             >download resume</a
           >
@@ -1053,8 +1053,8 @@
         <a href="https://twitter.com" target="_blank" title="Twitter">🐦</a>
         <a href="mailto:kishorerj018@gmail.com" title="Email">📧</a>
         <a
-          href="c:\Users\kisho\Downloads\software-developer-copy (9).pdf"
-          download="c:\Users\kisho\Downloads\software-developer-copy (9).pdf"
+          href="https://github.com/Kishorerj018/portfolio2/blob/master/kishore%20kumar%20.%20resume%20.%20pdf.pdf"
+          download="https://github.com/Kishorerj018/portfolio2/blob/master/kishore%20kumar%20.%20resume%20.%20pdf.pdf"
           title="Download Resume"
           >📄</a
         >
