--- a/index.html
+++ b/index.html
@@ -691,7 +691,7 @@
       <div class="about-content">
         <div class="about-image">
           <img
-            src="c:\Users\kisho\Downloads\WhatsApp Image 2025-11-02 at 11.15.06_a291652a.jpg"
+            src="https://github.com/Kishorerj018/portfolio2/blob/master/image.png.jpg"
             alt=" - Python Full Stack Developer"
             style="
               width: 100%;
