--- a/index.html
+++ b/index.html
@@ -109,13 +109,13 @@
 
       /* Hero Section */
       .hero {
-  min-height: 100vh;
-  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
-    url("https://raw.githubusercontent.com/Kishorerj018/portfolio2/master/WhatsApp-Image-2025-11-02-at-11.15.06_a291652a.jpg");
-  background-size: cover;
-  background-position: center;
-  background-attachment: fixed;
-}
+        min-height: 100vh;
+        background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
+          url("https://github.com/Kishorerj018/portfolio2/blob/master/image.png.jpg");
+        background-size: cover;
+        background-position: center;
+        background-attachment: fixed;
+      }
 
       .hero::before {
         content: "";
@@ -682,7 +682,7 @@
       <h2 class="section-title">About <span>Me</span></h2>
       <div class="about-content">
         <div class="about-image">
-          <img src="https://raw.githubusercontent.com/Kishorerj018/portfolio2/master/image.png.jpg"
+          <img src="https://github.com/Kishorerj018/portfolio2/blob/master/image.png.jpg"
             alt="Kishore Kumar - Python Full Stack Developer"
             style="
             width: 100%;
