--- a/index.html
+++ b/index.html
@@ -668,7 +668,7 @@
         <div class="hero-buttons">
           <a href="#portfolio" class="btn">View Work</a>
           <a
-            href="https://github.com/Kishorerj018/portfolio2/blob/master/kishore%20kumar%20.%20resume%20.%20pdf.pdf"
+            href="https://github.com/Kishorerj018/portfolio2/blob/master/software-developer-copy%20(10).pdf"
             class="btn"
             >download resume</a
           >
@@ -1043,8 +1043,8 @@
         <a href="https://twitter.com" target="_blank" title="Twitter">🐦</a>
         <a href="mailto:kishorerj018@gmail.com" title="Email">📧</a>
         <a
-          href="https://github.com/Kishorerj018/portfolio2/blob/master/kishore%20kumar%20.%20resume%20.%20pdf.pdf"
-          download="https://github.com/Kishorerj018/portfolio2/blob/master/kishore%20kumar%20.%20resume%20.%20pdf.pdf"
+          href="https:https://github.com/Kishorerj018/portfolio2/blob/master/software-developer-copy%20(10).pdf"
+          download="https://github.com/Kishorerj018/portfolio2/blob/master/software-developer-copy%20(10).pdf"
           title="Download Resume"
           >📄</a
         >
