--- a/index.html
+++ b/index.html
@@ -1043,7 +1043,7 @@
         <a href="https://twitter.com" target="_blank" title="Twitter">🐦</a>
         <a href="mailto:kishorerj018@gmail.com" title="Email">📧</a>
         <a
-          href="https:https://github.com/Kishorerj018/portfolio2/blob/master/software-developer-copy%20(10).pdf"
+          href="https://github.com/Kishorerj018/portfolio2/blob/master/software-developer-copy%20(10).pdf"
           download="https://github.com/Kishorerj018/portfolio2/blob/master/software-developer-copy%20(10).pdf"
           title="Download Resume"
           >📄</a
