Update image URLs in index.html

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       .hero {
         min-height: 100vh;
         background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
-          url("https://raw.githubusercontent.com/Kishorerj018/portfolio2/master/hero-background.jpg");
+          url("https://github.com/Kishorerj018/portfolio2/blob/master/image.png.jpg");
         background-size: cover;
         background-position: center;
         background-attachment: fixed;
@@ -691,7 +691,7 @@
       <h2 class="section-title">About <span>Me</span></h2>
         <div class="about-image">
           <img 
-            src="https://raw.githubusercontent.com/Kishorerj018/portfolio2/master/image.png.jpg"
+            src="https://github.com/Kishorerj018/portfolio2/blob/master/image.png.jpg"
             alt="Kishore Kumar - Python Full Stack Developer"
             style="
             width: 100%;
