--- a/index.html
+++ b/index.html
@@ -689,18 +689,19 @@
     <!-- About Section -->
     <section id="about">
       <h2 class="section-title">About <span>Me</span></h2>
+        div class="about-content">
         <div class="about-image">
-          <img 
+          <img
             src="https://github.com/Kishorerj018/portfolio2/blob/master/image.png.jpg"
-            alt="Kishore Kumar - Python Full Stack Developer"
+            alt=" - Python Full Stack Developer"
             style="
-            width: 100%;
-            border-radius: 20px;
-            box-shadow: 0 20px 60px rgba(50, 184, 198, 0.3);
-            border: 4px solid rgba(50, 184, 198, 0.2);"
-            />
+              width: 100%;
+              border-radius: 20px;
+              box-shadow: 0 20px 60px rgba(50, 184, 198, 0.3);
+              border: 4px solid rgba(50, 184, 198, 0.2);
+            "
+          />
         </div>
-
         <div class="about-text">
           <h3>Python Full Stack Developer</h3>
           <p>
