--- a/index.html
+++ b/index.html
@@ -689,8 +689,8 @@
     <!-- About Section -->
     <section id="about">
       <h2 class="section-title">About <span>Me</span></h2>
-        div class="about-content">
-        <div class="about-image">
+        <div class="about-content">
+          <div class="about-image">
           <img
             src="https://github.com/Kishorerj018/portfolio2/blob/master/image.png.jpg"
             alt=" - Python Full Stack Developer"
