--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Zain - Python Full Stack Developer</title>
+    <title>Kishore Kumar - Python Full Stack Developer</title>
     <style>
       * {
         margin: 0;
@@ -111,7 +111,7 @@
       .hero {
         min-height: 100vh;
         background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
-          url("https://github.com/Kishorerj018/portfolio2/blob/master/image.png.jpg");
+          linear-gradient(135deg, #1a1a2e 0%, #16213e 100%);
         background-size: cover;
         background-position: center;
         background-attachment: fixed;
@@ -124,7 +124,6 @@
         padding: 100px 20px 50px;
         position: relative;
       }
-
 
       .hero::before {
         content: "";
@@ -170,6 +169,8 @@
         gap: 20px;
         margin-top: 40px;
         animation: fadeIn 1.5s ease;
+        justify-content: center;
+        flex-wrap: wrap;
       }
 
       .btn {
@@ -232,6 +233,14 @@
       .about-image {
         position: sticky;
         top: 120px;
+      }
+
+      .about-image img {
+        width: 100%;
+        border-radius: 20px;
+        box-shadow: 0 20px 60px rgba(50, 184, 198, 0.3);
+        border: 4px solid rgba(50, 184, 198, 0.2);
+        display: block;
       }
 
       .about-text h3 {
@@ -560,6 +569,7 @@
         color: var(--color-white);
         font-size: 28px;
         transition: all 0.3s ease;
+        text-decoration: none;
       }
 
       .social-links a:hover {
@@ -611,6 +621,7 @@
 
         .nav-links {
           gap: 20px;
+          font-size: 14px;
         }
 
         .nav-links a {
@@ -645,7 +656,7 @@
         }
 
         .skills-grid {
-          grid-template-columns: 1fr;
+          grid-template-columns: repeat(2, 1fr);
         }
 
         .portfolio-grid,
@@ -677,9 +688,10 @@
         <div class="hero-buttons">
           <a href="#portfolio" class="btn">View Work</a>
           <a
-            href="https://github.com/Kishorerj018/portfolio2/blob/master/software-developer-copy%20(10).pdf"
+            href="https://raw.githubusercontent.com/Kishorerj018/portfolio2/master/software-developer-copy%20(10).pdf"
             class="btn"
-            >download resume</a
+            target="_blank"
+            >Download Resume</a
           >
           <a href="#contact" class="btn btn-primary">Hire Me!</a>
         </div>
@@ -689,17 +701,11 @@
     <!-- About Section -->
     <section id="about">
       <h2 class="section-title">About <span>Me</span></h2>
-        <div class="about-content">
-          <div class="about-image">
+      <div class="about-content">
+        <div class="about-image">
           <img
-            src="https://github.com/Kishorerj018/portfolio2/blob/master/image.png.jpg"
-            alt=" - Python Full Stack Developer"
-            style="
-              width: 100%;
-              border-radius: 20px;
-              box-shadow: 0 20px 60px rgba(50, 184, 198, 0.3);
-              border: 4px solid rgba(50, 184, 198, 0.2);
-            "
+            src="https://raw.githubusercontent.com/Kishorerj018/portfolio2/master/image.png.jpg"
+            alt="Kishore Kumar - Python Full Stack Developer"
           />
         </div>
         <div class="about-text">
@@ -721,39 +727,39 @@
             CRUD operations, authentication, and database integration.
             Passionate about creating efficient, user-friendly web applications.
           </p>
-        </div>
-        <div class="skills-grid">
-          <div class="skill-item">
-            <span class="skill-emoji">🐍</span>
-            Python
-          </div>
-          <div class="skill-item">
-            <span class="skill-emoji">🎯</span>
-            Django
-          </div>
-          <div class="skill-item">
-            <span class="skill-emoji">🗄️</span>
-            MySQL
-          </div>
-          <div class="skill-item">
-            <span class="skill-emoji">📱</span>
-            HTML/CSS
-          </div>
-          <div class="skill-item">
-            <span class="skill-emoji">⚡</span>
-            JavaScript
-          </div>
-          <div class="skill-item">
-            <span class="skill-emoji">🎨</span>
-            Bootstrap
-          </div>
-          <div class="skill-item">
-            <span class="skill-emoji">🔧</span>
-            Git/GitHub
-          </div>
-          <div class="skill-item">
-            <span class="skill-emoji">💻</span>
-            Full Stack
+          <div class="skills-grid">
+            <div class="skill-item">
+              <span class="skill-emoji">🐍</span>
+              Python
+            </div>
+            <div class="skill-item">
+              <span class="skill-emoji">🎯</span>
+              Django
+            </div>
+            <div class="skill-item">
+              <span class="skill-emoji">🗄️</span>
+              MySQL
+            </div>
+            <div class="skill-item">
+              <span class="skill-emoji">📱</span>
+              HTML/CSS
+            </div>
+            <div class="skill-item">
+              <span class="skill-emoji">⚡</span>
+              JavaScript
+            </div>
+            <div class="skill-item">
+              <span class="skill-emoji">🎨</span>
+              Bootstrap
+            </div>
+            <div class="skill-item">
+              <span class="skill-emoji">🔧</span>
+              Git/GitHub
+            </div>
+            <div class="skill-item">
+              <span class="skill-emoji">💻</span>
+              Full Stack
+            </div>
           </div>
         </div>
       </div>
@@ -984,7 +990,7 @@
             <div class="contact-icon">📧</div>
             <div>
               <strong>Email</strong><br />
-              kishorerj018@gmail.com
+              <a href="mailto:kishorerj018@gmail.com" style="color: var(--color-primary); text-decoration: none;">kishorerj018@gmail.com</a>
             </div>
           </div>
           <div class="contact-item">
@@ -1003,7 +1009,7 @@
           </div>
         </div>
 
-        <form class="contact-form">
+        <form class="contact-form" onsubmit="handleContactForm(event)">
           <div class="form-group">
             <label for="name">Name</label>
             <input type="text" id="name" placeholder="Your Name" required />
@@ -1054,8 +1060,8 @@
         <a href="https://twitter.com" target="_blank" title="Twitter">🐦</a>
         <a href="mailto:kishorerj018@gmail.com" title="Email">📧</a>
         <a
-          href="https://github.com/Kishorerj018/portfolio2/blob/master/software-developer-copy%20(10).pdf"
-          download="https://github.com/Kishorerj018/portfolio2/blob/master/software-developer-copy%20(10).pdf"
+          href="https://raw.githubusercontent.com/Kishorerj018/portfolio2/master/software-developer-copy%20(10).pdf"
+          target="_blank"
           title="Download Resume"
           >📄</a
         >
@@ -1082,13 +1088,11 @@
       });
 
       // Form submission handler
-      document
-        .querySelector(".contact-form")
-        .addEventListener("submit", function (e) {
-          e.preventDefault();
-          alert("Thank you for your message! I will get back to you soon.");
-          this.reset();
-        });
+      function handleContactForm(e) {
+        e.preventDefault();
+        alert("Thank you for your message! I will get back to you soon.");
+        e.target.reset();
+      }
 
       // Active navigation highlight on scroll
       window.addEventListener("scroll", function () {
